--- a/trivia-front/package.json
+++ b/trivia-front/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "crypto-js": "^4.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
@@ -24,7 +25,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "sass": "^1.71.1",
+    "sass": "^1.72.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
   }
